--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<section class="intro">
 			<h2>Objetivo </h2>
 			&nbsp
-			<p> Uma maneira de alcançar a equidade de gênero é corrigir o modo como conhecimento é apresentado e transmido. Atualmente percebe-se uma grande viés masculino em textos científicos e neste trabalho buscaremos meios que possibilitem a correção de conhecimento em corpus. Para analisar como corrigir esse viés, nossos objetos de estudo serão corpus de websites em língua portuguesa. 
+			<p> Uma maneira de alcançar a equidade de gênero é corrigir o modo como conhecimento é apresentado e transmitido. Atualmente percebe-se uma grande viés masculino em textos científicos e neste trabalho buscaremos meios que possibilitem a correção de conhecimento em corpus. Para analisar como corrigir esse viés, nossos objetos de estudo serão corpus de websites em língua portuguesa. 
 			</p>			
 		</section>
 
