--- a/blog.html
+++ b/blog.html
@@ -40,6 +40,22 @@
 		<section class="intro">
 			<h2>Inovação de gênero: detecção de padrões de viés de genero em textos de websites</h2>
 		</section>
+        
+
+		<section>
+			<h3>I got lost on my adventure, but I just found myself!</h3>
+			<h4>06/06/2017</h4>
+
+			<p>Depois de um hiato motivado por forças maiores estou voltando a focar no trabalho, bastante preocupada porém muito animada.</p>
+            <p>O primeiro passo aqui, que ainda está acontecendo, é fazer um cronograma pra controlar e distribuir melhor o tempo até o deadline do tcc, que ainda está sendo decidido pela professora da disciplina, porém é bem provável que seja nas duas primeiras semanas de novembro.
+            além de enxergar melhor o que está acontecendo, já que eu sou a rainha de me perder.</p>
+            <p>Em segundo lugar, continuei do ponto em que parei há um mês atrás, pesquisar desesperadamente sobre anotação de corpus e encontrei alguns livros e artigos sobre corpus linguísticos e processamento de linguagem natural. Foi interessante por que deu pra entender melhor como uma área apoia a outra e entender alguns pontos básicos, porém eu preciso especificar melhor no que preciso focar e para isso eu vou atrás do professor Marcos Lopes da área de linguística da FFLCH,
+            segundo alguns colegas meus os professores da FFLCH são bem tranquilos para conversar e isso é animador. Quero conversar com ele pra descobrir mais pessoas, fontes e principalmente descobrir se esse senhor sabe onde posso achar corpora anotados que se encaixem no tipo de texto que estavamos interessados inicialmente. Se eu não os encontrar, pelo menos agora tenho uma ideia muito melhor de como eu posso fazer isso.</p>
+            <p>Até aqui, tendo que ler um pouco sobre linguística pra entender o básico, achei bem bacana por que pela primeira vez mesmo eu tenho que entender uma outra área relativamente distante da computação, no senso comum, e eu estou achando AWESOME. Sim! Eu, que passei muito tempo pensando que depois do vestibular eu ia me interessar por português para no máximo não falar/escrever que nem o Tarzan, estou achando AWESOME e lindo por que afinal, a linguagem é um dos pontos que nos une e
+            e compreender direito como ela funciona é muito divertido.</p>
+            <p>Uma preocupação constante na minha cabeça é o que fazer depois de resolver o problema de encontrar os copora anotados sobre o que vamos tentar encontrar nesses textos, não tenho ideia do que fazer e isso me dá coisinhas de nervoso.</p>
+            <p>That's all for now, folks!</p>
+		</section>
 
 		<section>
 			<h3>I'm going on an adventure!</h3>
